# toyjs

./: .gdb_history  .gitignore  .rustfmt.toml  .rusty-hook.toml  .stignore  1.toyjs.js  Cargo.toml  README.md  callgrind.out.103607  callgrind.out.44853  criterion.toml  lang_report.txt  missing.md  test.js  tmp.txt  toyjs.js  toyjs.wasm
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lib.rs  macro.rs  render.rs  symbol_table.rs  variables.rs  visitor.rs
crates/ast/src/ast/: list.rs  mod.rs  print.rs
crates/bc/: Cargo.toml
crates/bc/src/: display.rs  instructions.rs  lib.rs  macro.rs  reader.rs  util.rs  writer.rs
crates/common/: Cargo.toml  parser.rs
crates/common/examples/: cat.rs
crates/common/src/: any_vec.rs  assert.rs  bitmap.rs  bump_list.rs  cell_vec.rs  format.rs  index.rs  inline_vec.rs  interner.rs  lib.rs  mac.rs  number.rs  ptr.rs  result.rs  slotmap.rs  smaller_vec.rs  source.rs  span.rs  string.rs  structs.rs  thinvec.rs  unicode.rs
crates/common/src/atom/: constant.rs  constants.rs  mod.rs
crates/common/src/atom_old/: constant.rs
crates/common/src/id/: mod.rs
crates/common/src/id/collections/: mod.rs  set.rs  vec.rs
crates/common/src/source/: format.rs  mod.rs
crates/common/src/string/: builder.rs  code_units.rs  encoding.rs  mod.rs  old_repr.rs  repr.rs
crates/common/src/string/encoding/: ascii.rs  mod.rs  utf16.rs
crates/common/src/string/repr/: flags.rs  tagged_ptr.rs
crates/common/src/tagged_ptr/: mod.rs  tagged.rs  untagged.rs
crates/compiler/: Cargo.toml
crates/compiler/benches/: iai_scripts_resolve.rs  scripts_resolve.rs
crates/compiler/examples/: compile.rs  compiler.rs  resolve.rs  variables.rs
crates/compiler/src/: builder.rs  constants.rs  decl.rs  error.rs  expr.rs  function.rs  lexical_info.rs  lib.rs  placement.rs  prime.rs  proc.rs  register.rs  ssa.rs  ssa.sync-conflict-20201008-144127-RAY4765.rs  stmt.rs  symbol.rs  variables.rs
crates/compiler/src/compile/: expr.rs  mod.rs
crates/compiler/src/generate/: bytecode_builder.rs  mod.rs  register_allocator.rs
crates/compiler/src/old/: assign.rs  lexical_info.rs  lib.rs  ssa.rs
crates/compiler/src/old/compile/: flow.rs
crates/compiler/src/old/generate/: bytecode_builder.rs
crates/compiler/src/registers/: mod.rs  use_bitmap.rs
crates/compiler/src/symbol/: mod.rs  use_bitmap.rs
crates/compiler/src/variables/: expr.rs  livelyhood.rs  mod.rs  render.rs  stmt.rs
crates/compiler/src/variables/builder/: expr.rs  mod.rs  stmt.rs
crates/compiler/src/variables/resolve/: declare.rs  driver.rs  mod.rs  render.rs  use.rs
crates/compiler/src/variables/resolve2/: declare.rs  driver.rs  (+1 more)
crates/compiler2/: Cargo.toml
crates/compiler2/src/: constants.rs  stmt.rs
crates/compiler2/src/old/: register.rs
crates/dump_bytecode/: Cargo.toml
crates/dump_bytecode/src/: main.rs
crates/lexer/: Cargo.toml  TODO.md
crates/lexer/benches/: lexer.rs  test.js
crates/lexer/examples/: lex.rs  lexer.rs
crates/lexer/src/: ident.rs  lib.rs  number.rs  regex.rs  string.rs  utf.rs
crates/parser/: .gitignore  Cargo.toml  test.js
crates/parser/benches/: iai_scripts.rs  parser.rs  scripts.rs  setup.sh
crates/parser/examples/: parse.rs  parser.rs
crates/parser/src/: binding.rs  class.rs  constants.rs  error.rs  expr.rs  function.rs  lib.rs  macros.rs  prime.rs  stmt.rs
crates/parser/tests/: parser.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs  macro.rs  macros.rs  token.rs
crates/vm/: Cargo.toml
crates/vm/examples/: eval.rs  vm.rs
crates/vm/src/: cell.rs  function.rs  lib.rs  lock.rs  object.rs  stack.rs  vm.rs
crates/vm/src/atom/: constant.rs  constants.rs  mod.rs
crates/vm/src/env/: mod.rs
crates/vm/src/exec/: convert.rs  dispatch.rs  function.rs  mod.rs  operator.rs  relation.rs
crates/vm/src/function/: mod.rs
crates/vm/src/gc/: arena.rs  asan.rs  cell.rs  constants.rs  impl_trace.rs  list.rs  mac.rs  mem.rs  memory.rs  mmap.rs  mod.rs  ptr.rs  roots.rs  segment.rs  test.rs  trace.rs  vtable.rs
crates/vm/src/gc2/: impl_trace.rs  mod.rs  ptr.rs  test.rs
crates/vm/src/instructions/: buffer.rs  macros.rs  mod.rs
crates/vm/src/instructions_old/: macros.rs
crates/vm/src/object/: elements.rs  function.rs  index.rs  iterator.rs  mod.rs  properties.rs  property.rs  props.rs  shape.rs
crates/vm/src/object2/: function.rs  index.rs  mod.rs
crates/vm/src/old/: function.rs  lib.rs  object.rs
crates/vm/src/realm/: builtin.rs  ctx.rs  environment.rs  exec.rs  mod.rs  reader.rs  stack.rs
crates/vm/src/realm2/: context.rs  stack.rs
crates/vm/src/realm_old/: ctx.rs  exec.rs  mod.rs  reader.rs
crates/vm/src/stack/: buffer.rs  mod.rs
crates/vm/src/util/: asan.rs  list.rs  mod.rs
crates/vm/src/value/: bound.rs  mod.rs  nan_tagged.rs  tagged_union.rs
old/crates/common/: Cargo.toml
old/crates/common/src/: cell_vec.rs  interner.rs  slotmap.rs  source.rs  source2.rs
old/crates/compiler/: Cargo.toml
old/crates/compiler/src/: builder.rs  lib.rs
toyjs/: Cargo.toml
toyjs/benches/: expr.rs  objectIndex.js  objectIndexExpr.js  scripts.rs  startup.rs
toyjs/examples/: cli.rs
toyjs/src/: atom.rs  bound.rs  context.rs  ctx.rs  error.rs  ffi.rs  function.rs  lib.rs  object.rs  string.rs  unsafe_mutex.rs  value.rs
toyjs/src/convert/: mod.rs
toyjs/src/old/: atom.rs  error.rs  ffi.rs  function.rs  lib.rs  object.rs  value.rs
toyjs/src/runtime/: mod.rs
toyjs/tests/: binding.js  expression.rs  gc.rs  object.js  parseInt.js  scripts.rs  this.js  throw.js  upvalue.js
toyjs/testss/: callDeep.js  constructor.js  flow.js  gc.rs  scripts.rs  upvalue.js
toyjs_test/: Cargo.toml
toyjs_test/src/: args.rs  harness.rs  main.rs  test.rs
toyjs_test/src/commands/: all.rs  delta.rs  mod.rs
toyjs_web/: .gitignore  Cargo.toml  bootstrap.js  index.html  index.js  package.json  pnpm-lock.yaml  style.css  style.scss  webpack.config.js
toyjs_web/src/: lib.rs
toyjs_web/static/: index.html
web/toyjs-playground/toyjs-playground-bundle/: Cargo.toml  index.js
web/toyjs-playground/toyjs-playground-bundle/src/: compile.rs  lex.rs  lib.rs
(+227 files in other folders)
