[package]
name = "toyjs"
version = "0.1.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package="toyjs_common",path = "../crates/common/" }
token = { package="toyjs_token",path = "../crates/token/" }
lexer = { package="toyjs_lexer",path = "../crates/lexer/" }
ast = { package="toyjs_ast",path = "../crates/ast/" }
parser = { package="toyjs_parser",path = "../crates/parser/" }
compiler = { package="toyjs_compiler",path = "../crates/compiler/" }
vm = { package="toyjs_vm",path = "../crates/vm/" }

[dev-dependencies]
criterion = "0.3.5"

[features]
tagged-union = ["vm/tagged-union"]
gc-dump-trace = ["vm/gc-dump-trace"]
gc-force-collect-full = ["vm/gc-force-collect-full"]

#[[bench]]
#name = "startup"
#harness = false

#[[bench]]
#name = "expr"
#harness = false

#[[bench]]
#name = "scripts"
#harness = false


#[[bin]]
#name = "cli"

