[package]
name = "toyjs_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toyjs = { path = "../toyjs" }
clap = {version = "3.1.6", features=["derive"]}
anyhow = "1.0.56"
serde = {version = "1.0.136",features=["derive"]}
serde_yaml = "0.8.23"
termcolor = "1.1.3"
serde_json = "1.0.79"

[features]
gc-dump-trace = ["toyjs/gc-dump-trace"]
gc-force-collect-full = ["toyjs/gc-force-collect-full"]
