[package]
name = "toyjs_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common", package = "toyjs_common" }
token = { version = "0.1.0", path = "../token", package = "toyjs_token" }
