[package]
name = "toyjs_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { package = "toyjs_ast", version = "0.1.0", path = "../ast" }
bc = { package = "toyjs_bc", version = "0.1.0", path = "../bc" }
bytemuck = { version = "1.13.1", features = ["derive"] }
common = { package = "toyjs_common", version = "0.1.0", path = "../common" }

[features]
slow_checks = ["bc/slow_checks"]

[[example]]
name = "compiler"

[dev-dependencies]
lexer = { path = "../lexer", package = "toyjs_lexer" }
parser = { package = "toyjs_parser", version = "0.1.0", path = "../parser" }
