[package]
name = "toyjs_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { package = "toyjs_ast", version = "0.1.0", path = "../ast", features = ["visitor"] }
bc = { package = "toyjs_bc", version = "0.1.0", path = "../bc" }
bytemuck = { version = "1.13.1", features = ["derive"] }
common = { package = "toyjs_common", version = "0.1.0", path = "../common" }

[dev-dependencies]
lexer = { path = "../lexer", package = "toyjs_lexer" }
parser = { package = "toyjs_parser", version = "0.1.0", path = "../parser" }


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.4.0"
iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }

[features]
slow_assert = ["bc/slow_assert"]

[[bench]]
name = "scripts_resolve"
harness = false

#[[bench]]
#name = "iai_scripts_resolve"
#harness = false

[[example]]
name = "compile"


