[package]
name = "toyjs_compiler2"
version = "0.1.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package="toyjs_common",path = "../common/" }
ast = { package="toyjs_ast",path = "../ast/" }
vm = { package="toyjs_vm",path = "../vm/" }
bumpalo = { version = "3.4.0", features = ["boxed","collections"]}
