[package]
name = "dump_bytecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package="toyjs_common",path = "../common/" }
token = { package="toyjs_token",path = "../token/" }
lexer = { package="toyjs_lexer",path = "../lexer/" }
ast = { package="toyjs_ast",path = "../ast/" }
parser = { package="toyjs_parser",path = "../parser/" }
compiler = { package="toyjs_compiler",path = "../compiler/" }
runtime = { package="toyjs_runtime",path = "../runtime/" }
