[package]
name = "toyjs_lexer"
version = "0.1.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package="toyjs_common",path = "../common/" }
token = { package="toyjs_token",path = "../token/" }
lexical-core = "0.7.4"
unicode-xid = "0.2.1"


[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "lexer"
harness = false

[[bin]]
name = "dump_tokens"
