[package]
name = "toyjs_lexer"
version = "0.1.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package="toyjs_common",path = "../common/" }
token = { package="toyjs_token",path = "../token/" }
lexical-core = "0.8.3"
unicode-xid = "0.2.2"


[dev-dependencies]
criterion = "0.3.5"

# [[bench]]
# name = "lexer"
# harness = false

[[bin]]
name = "dump_tokens"
