[package]
name = "toyjs_lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
common = { version = "0.1.0", path = "../common", package = "toyjs_common" }
phf = {version = "0.11.1", features = ["macros"]}
token = { version = "0.1.0", path = "../token", package = "toyjs_token" }
