[package]
name = "toyjs_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "0.1.0", path = "../ast", package = "toyjs_ast" }
bytemuck = { version = "1.13.1", features = ["derive"] }
common = { version = "0.1.0", path = "../common", package = "toyjs_common" }
lexer = { version = "0.1.0", path = "../lexer", package = "toyjs_lexer" }
token = { version = "0.1.0", path = "../token", package = "toyjs_token" }

[features]
trace_error = []

[dev-dependencies]
criterion = "0.4.0"
iai = "0.1.1"

[[bench]]
name = "scripts"
harness = false

[[bench]]
name = "iai_scripts"
harness = false
