[package]
name = "toyjs_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "0.1.0", path = "../ast", package = "toyjs_ast" }
bitflags = "2.4.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
common = { version = "0.1.0", path = "../common", package = "toyjs_common" }
lexer = { version = "0.1.0", path = "../lexer", package = "toyjs_lexer" }
token = { version = "0.1.0", path = "../token", package = "toyjs_token" }

[features]
trace_error = []

[dev-dependencies]
criterion = "0.4.0"
iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }

[[bench]]
name = "scripts"
harness = false

#[[bench]]
#name = "iai_scripts"
#harness = false

[[example]]
name = "parse"
