[package]
name = "toyjs_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { package="toyjs_common", version = "0.1.0", path = "../common" }
ast = { version = "0.1.0", path = "../ast", package = "toyjs_ast" }
