[package]
name = "toyjs_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bc = { version = "0.1.0", path = "../bc", package = "toyjs_bc"}
common = { version = "0.1.0", path = "../common", package = "toyjs_common" }

[features]
slow_assert = ["bc/slow_assert", "common/slow_assert"]

[dev-dependencies]
lexer = { path = "../lexer", package = "toyjs_lexer" }
parser = { package = "toyjs_parser", path = "../parser" }
compiler = { package = "toyjs_compiler", path = "../compiler" }
