[package]
name = "toyjs_common"
version = "0.1.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dreck = {git = "https://github.com/DelSkayn/dreck" }
fxhash = "0.2.1"
static_assertions = "1.1.0"
