[package]
name = "toyjs_compiler"
version = "0.1.0"
authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dreck = {git = "https://github.com/DelSkayn/dreck" }
common = { package="toyjs_common",path = "../common/" }
ast = { package="toyjs_ast",path = "../ast/" }
vm = { package="toyjs_vm",path = "../vm/" }
